--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Demo </title>
   </head>
   <body>
-    Test CF LINK
+    Test CF LINK TANPA VPN
+    <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpPvtGodiiX1hpeJgC7OxNlForym5qZkeGkOB0K8TlBMQ8XvZj8yMcOpQ&s=10">
   </body>
 </html>
