--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Demo </title>
+    <title>Demo NO VPN</title>
   </head>
   <body>
-    Test CF LINK TANPA VPN
-    <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpPvtGodiiX1hpeJgC7OxNlForym5qZkeGkOB0K8TlBMQ8XvZj8yMcOpQ&s=10">
+    <i> Test CF LINK TANPA VPN </i>
+    <img scr="https://upload.wikimedia.org/wikipedia/id/1/12/Logo_Persib.png">
   </body>
 </html>
