--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <i> Test CF LINK TANPA VPN </i>
-    <img scr="https://upload.wikimedia.org/wikipedia/id/1/12/Logo_Persib.png">
+    <img src="https://upload.wikimedia.org/wikipedia/id/1/12/Logo_Persib.png">
   </body>
 </html>
